[gd_scene load_steps=10 format=1]

[ext_resource path="res://tower-defense/model/player.gd" type="Script" id=1]
[ext_resource path="res://tower-defense/assets/bodies/turret.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/PressStart-12p.fnt" type="BitmapFont" id=3]
[ext_resource path="res://assets/fonts/PressStart-32p.fnt" type="BitmapFont" id=4]
[ext_resource path="res://tower-defense/model/turrets/normal-turret.tscn" type="PackedScene" id=5]
[ext_resource path="res://tower-defense/components/tdef-controller.gd" type="Script" id=6]
[ext_resource path="res://tower-defense/components/tdef-death-controller.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
light_color = Color( 0.269531, 0.248474, 0.248474, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 2
border_blend = true
draw_bg = true

[sub_resource type="Theme" id=2]

Panel/styles/panel = SubResource( 1 )
Panel/styles/panelf = null
Panel/styles/panelnc = null

[node name="Player" type="Node2D"]

script/script = ExtResource( 1 )
health = 100

[node name="LifeBar" type="ProgressBar" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 11.0
margin/top = 676.0
margin/right = 353.0
margin/bottom = 709.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = true
percent/visible = true

[node name="TurretButtons" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 2 )
margin/left = 831.0
margin/top = 641.0
margin/right = 1274.0
margin/bottom = 719.0

[node name="NormalTurret" type="Button" parent="TurretButtons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = 6.0
margin/right = 93.0
margin/bottom = 76.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 2 )
flat = true

[node name="LifeLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 18.0
margin/top = 644.0
margin/right = 273.0
margin/bottom = 671.0
custom_fonts/font = ExtResource( 3 )
text = "Life"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MoneyLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 375.0
margin/top = 642.0
margin/right = 452.0
margin/bottom = 672.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.863281, 0.801844, 0.148376, 1 )
text = "Money"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Money" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 372.0
margin/top = 674.0
margin/right = 620.0
margin/bottom = 707.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.863281, 0.801844, 0.148376, 1 )
text = "R$"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DeathAlert" type="Label" parent="."]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 32.0
margin/right = -1243.0
margin/bottom = -605.0
custom_fonts/font = ExtResource( 4 )
text = "You Died"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CurrentWave" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 571.0
margin/top = 647.0
margin/right = 819.0
margin/bottom = 714.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.134506, 0.613391, 0.800781, 1 )
text = "Wave #"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TurretsType" type="Node" parent="."]

[node name="NormalTurret" parent="TurretsType" instance=ExtResource( 5 )]

visibility/visible = false
damage = 2
shoot_speed = 0.3
turn_speed = 0.04

[node name="Controller" type="Node" parent="."]

script/script = ExtResource( 6 )

[node name="DeathController" type="Node" parent="."]

script/script = ExtResource( 7 )

[connection signal="pressed" from="TurretButtons/NormalTurret" to="." method="_on_normal_turret_button_released"]


